fixed plot error

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -103,7 +103,7 @@ cancer %>%
 
 Next, let's draw a scatter plot to visualize the relationship between the perimeter and concavity variables. To avoid `ggplot's` default pallete, we define our own here and specify to use it in the `scale_color_manual` function. In that function we also make the category labels of "B" and "M" something more readable, "Benign" and "Malignant", respectively.
 
-```{r plot perimeter vs concavity, fig.height = 4, fig.width = 5}
+```{r fig.height = 4, fig.width = 5}
 # colour palette
 cbPalette <- c("#56B4E9", "#E69F00","#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7", "#999999") 
 
