--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -74,7 +74,7 @@ set.seed(1234) # makes the random selection of rows reproducible
 set_rows <- cancer %>% 
   select(Class) %>% 
   unlist() %>% # converts Class from a tibble to a vector
-  createDataPartition(p = 0.60, list = FALSE)
+  createDataPartition(p = 0.75, list = FALSE)
 head(set_rows)
 ```
 
@@ -92,7 +92,7 @@ glimpse(training_set)
 glimpse(validation_set)
 ```
 
-We can see from `glimpse` in the code above that the training set contains 343 observations, while the validation set contains 226 observations. This corresponds to the training set having 60% of the observations from the original data set and the validation set having the other 40% of the observations. We specified this when we set `p = 0.60` when we called `createDataPartition`. 
+We can see from `glimpse` in the code above that the training set contains 427 observations, while the validation set contains 142 observations. This corresponds to the training set having 75% of the observations from the original data set and the validation set having the other 40% of the observations. We specified this when we set `p = 0.60` when we called `createDataPartition`. 
 
 #### Creating the k-nn classifier
 
@@ -137,3 +137,116 @@ Y_validation <- validation_set %>%
 model_quality <- confusionMatrix(data = Y_validation_predicted, reference = Y_validation)
 model_quality
 ```
+
+A lot of information is output from `confusionMatrix`, but what we are interested in at this point is accuracy (found on the 6th line of printed output). That single value can be obtained from the `confusionMatrix` object using base/built-in R subsetting:
+
+```{r}
+model_quality$overall[1]
+```
+
+From a value of accuracy of 0.9070796, we can say that our k-nn classifier predicted the correct class label ~ 89% of the time. 
+
+## Cross-validation for assessing classifier quality
+
+Is that the best estimate of accuracy that we can get? What would happen if we again shuffled the observations in our training and validation sets, would we get the same accuracy? Let's do and experiment and see. By changing the `set.seed` value, we can get a different shuffle of the data when we create our training and validation data sets. 
+
+Using `set.seed(4321)`
+
+```{r set seed 4321}
+set.seed(4321) # makes the random selection of rows reproducible
+set_rows <- cancer %>% 
+  select(Class) %>% 
+  unlist() %>% # converts Class from a tibble to a vector
+  createDataPartition(p = 0.75, list = FALSE)
+training_set <- cancer %>% slice(set_rows)
+validation_set <- cancer %>% slice(-set_rows)
+X_train <- training_set %>% 
+  select(Concavity, Perimeter) %>% 
+  data.frame()
+Y_train <- training_set %>% 
+  select(Class) %>% 
+  unlist()
+k = data.frame(k = 3)
+model_knn <- train(x = X_train, y = Y_train, method = "knn", tuneGrid = k)
+X_validation <- validation_set %>% 
+  select(Concavity, Perimeter) %>% 
+  data.frame()
+Y_validation_predicted <- predict(object = model_knn, X_validation)
+Y_validation <- validation_set %>% 
+  select(Class) %>% 
+  unlist()
+model_quality <- confusionMatrix(data = Y_validation_predicted, reference = Y_validation)
+model_quality$overall[1]
+```
+
+Using `set.seed(8765)`
+```{r set seed 5678}
+set.seed(8765) # makes the random selection of rows reproducible
+set_rows <- cancer %>% 
+  select(Class) %>% 
+  unlist() %>% # converts Class from a tibble to a vector
+  createDataPartition(p = 0.75, list = FALSE)
+training_set <- cancer %>% slice(set_rows)
+validation_set <- cancer %>% slice(-set_rows)
+X_train <- training_set %>% 
+  select(Concavity, Perimeter) %>% 
+  data.frame()
+Y_train <- training_set %>% 
+  select(Class) %>% 
+  unlist()
+k = data.frame(k = 3)
+model_knn <- train(x = X_train, y = Y_train, method = "knn", tuneGrid = k)
+X_validation <- validation_set %>% 
+  select(Concavity, Perimeter) %>% 
+  data.frame()
+Y_validation_predicted <- predict(object = model_knn, X_validation)
+Y_validation <- validation_set %>% 
+  select(Class) %>% 
+  unlist()
+model_quality <- confusionMatrix(data = Y_validation_predicted, reference = Y_validation)
+model_quality$overall[1]
+```
+
+When we have 3 different shuffles of the data, we get 3 different values for accuracy! 0.8873239, 0.9366197 and 0.915493! Which one is correct? Sadly, there is no easy answer to that question. The best we can do is to do this many times and take the average of the accuracies. Typically this is done is a more structured way so that each observation in the data set is used in a validation set only a single time. The name for this strategy is called cross-validation and we illustrate it below:
+
+<img src="img/cv.png" width="800" />
+
+In the picture above, 5 different folds/partitions of the data set are shown, and consequently we call this 5-fold cross-validation. To do 5-fold cross-validation in R with `caret`, we use another function called `trainControl`. This function passes additional information to the `train` function we use to create our classifier. The arguments we pass `trainControl` are:
+
+1. `method` (method used for assessing classifier quality, here we specify `"cv"` for cross-validation)
+2. `number` (how many folds/partitions of the data set we want to use for cross validation)
+
+```{r}
+set.seed(1234)
+train_control <- trainControl(method="cv", number = 5)
+```
+
+Then when we create our classifier we add an additional argument to `train`, called `trControl` where we give it the name of the object we created with the `trainControl` function. Additionally, we do not need to specify a training and a validation set because we are telling `train` that we are doing cross validation (it will take care creating the folds, calculating the accuracy for each fold and averaging the accuracies for us).
+
+```{r }
+X_cancer <- cancer %>% 
+  select(Concavity, Perimeter) %>% 
+  data.frame()
+Y_cancer <- cancer %>% 
+  select(Class) %>% 
+  unlist()
+k = data.frame(k = 3)
+knn_model_cv_5fold <- train(x = X_cancer, y = Y_cancer, method = "knn", tuneGrid = k, trControl = train_control)
+knn_model_cv_5fold
+```
+
+We can choose any number of folds, typically the more the better. However we are limited by computational power. The more folds we choose, the computation it takes, and hence the more time it takes to run the analysis. So for each time you do cross-validation you need to consider the size of the data, and the speed of the algorithm (here k-nn) and the speed of your computer. In practice this is a trial and error process. Here we show what happens when we do 10 folds:
+
+```{r}
+train_control <- trainControl(method="cv", number = 10)
+knn_model_cv_10fold <- train(x = X_cancer, y = Y_cancer, method = "knn", tuneGrid = k, trControl = train_control)
+knn_model_cv_10fold
+```
+
+## Choosing $k$ for k-nn classification
+
+This could be not too bad of an accuracy, however what accuracy you aim for always depends on the downstream application of your analysis. Here, we are trying to predict a very important outcome, tumour cell diagnosis class. And the class label we assign to a real patient may have life or death consequences. Hence, we'd like to do better for this application than 90%. 
+
+
+
+
